--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,17 @@
         <item>Shade</item>
     </array>
 
+    <array name="color_effect">
+        <item>Auto</item>
+        <item>Incandescent</item>
+        <item>Fluorescent</item>
+        <item>Warm Fluorescent</item>
+        <item>Daylight</item>
+        <item>Cloudy Daylight</item>
+        <item>Twilight</item>
+        <item>Shade</item>
+    </array>
+
     <array name="scene_mode">
         <item>Auto</item>
         <item>Incandescent</item>
